Changelog 1.6.4:
Trakt requests now automatically re-try in the event of remote server failures
Fixed issue with some movies not being marked as collected during sync
Catch stringed NoneType values in database.py
Resolver now returns None if cancelled, regardless if resolving was successful
File size limits are now enabled by default (10GB)
Fixed settings cleanup method (missmatch settings error)
Fixed MyFiles for All Debrid
Seperated cloud services within MyFiles

Changelog 1.6.3:
Fixed backwards compatibility for older Seren list urls
Movie titles now confirm against IMDB before scrape
Stop triggering Oauth refresh on 401 errors
Next up sort style now requires Trakt Auth
All Debrid magnets are now removed from account after resolving is complete
Fixed source size possibly displaying multiple times in resolver window
Rescrape now only applies to initial playlist item
Fixed ability to backout of Hide Item selection in Trakt manager
Fixed Trakt lists with same name being mixed up
Trakt list titles now also append the username

Changelog 1.6.2:
Fixed trakt database rebuild issues

Changelog 1.6.1:
Fix playback for RD items in My Files
Fix Trakt Sync Databsae not upgrading correctly
Fixed Trakt lists missing items
Settings dialog now closes during PM auth
Fixed double database rebuilding
Fixed AllDebrid movie resolving
Fix list comprehension error in check_for_updates method in skin_manager module

Changelog 1.6.0:
Some Greek translations added
Some German translations added
Next Up menu now generated completely locally using DB query
Added All-Debrid Support
Premiumize now uses O-Auth (re-auth is required)
Complete re-work of the standard playlist building (removes building playlist window for standard playback)
Re-work of My Files module to reduce spaghetti
Re-work of resolver module to reduce spaghetti
New Custom Windows Still Watching/Play Next
Added update support for Seren Themes
Removed support for UpNext addon
Lists are now synced to the trakt database